# ngk_2025

./: .gitmodules  README.md  clustering_utils.py  framework.py  main.py  pyproject.toml  report_utils.py  utils.py
_data/: clustering_summary_openai_4o_embedding_openai_3_large.jsonl  is_by_n_kats.jsonl  long_summary_clustering_summary_openai_4o_embedding_openai_3_large.jsonl  row_markdown.jsonl  summary_clustering_summary_openai_4o_embedding_openai_3_large.jsonl  summary_openai_4o.jsonl  title.jsonl
_overwrite/: debug.overwrite.jsonl
_report/: clustering_summary_openai_4o_embedding_openai_3_large.md
_report/n_kats/: clustering_summary_openai_4o_embedding_openai_3_large_n_kats.md
