[tool.poetry]
name = "ngk-2025"
version = "0.1.0"
description = ""
authors = ["n-kats <n-kats19890214@hotmail.co.jp>"]
readme = "README.md"
license = "MIT"
package-mode =false

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.58.1"
chromadb = "^0.6.0"
hdbscan = "^0.8.40"
pandas = "^2.2.3"
numba = "^0.60.0"
bertopic = "^0.16.4"
janome = "^0.5.0"
seaborn = "^0.13.2"
matplotlib = "^3.10.0"


[tool.poetry.group.dev.dependencies]
ipython = "^8.31.0"
pdbpp = "^0.10.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
